tests/invalid/trust_requires_struct_type.wio
@Trust(i32)
object BadTrust {
    value: i32 = 0;
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
